--- a/orang.html
+++ b/orang.html
@@ -1,1 +1,10 @@
-asd
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8" />
+        <title>orang</title>
+    </head>
+    <body>
+        
+    </body>
+</html>
